tests/ui/unsorted-enum.stderr
error: Bbb should sort before Ccc
 --> tests/ui/unsorted-enum.rs:9:5
  |
3 | #[sorted]
  | --------- in this procedural macro expansion
...
9 |     Bbb(u8, u8),
  |     ^^^
  |
  = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
